examples/working/errors/ann4e.slk
data cell {
  int val;
}.


infer [] y::cell<a>@M |- y::cell<b>@v.
print residue.



